(feed) Use the message queue to permit the feeds service to tell the calling actor when it's finished